--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-	"name": "agentic-compliance-api",
-	"version": "0.0.0",
+	"name": "lol-build-agent",
+	"version": "1.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
+		"dev": "nodemon src/index.js",
+		"start": "node src/index.js",
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.12.4",
-		"vitest": "~3.2.0",
-		"wrangler": "^4.60.0"
+		"vitest": "~3.2.0"
 	},
 	"dependencies": {
-		"https": "^1.0.0",
-		"openai": "^6.16.0"
+		"dotenv": "^16.4.5",
+		"nodemon": "^3.1.11",
+		"openai": "^6.16.0",
+		"undici": "^7.19.1"
 	}
 }
