feat: Comparacion de items y recomendacion de build mediante front

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+# Para GPT
+## AI_LANGUAGE_MODEL=gpt-4o-mini
 
-AI_LANGUAGE_MODEL=gpt-4o-mini
-
-OPENAI_API_KEY=your-openai-api-key-here
+## OPENAI_API_KEY=your_openai_api_key_here
+# Para Gemini
+GOOGLE_API_KEY=your_google_api_key_here
+# Modelo para recomendar build (Se usa 2.5 porque no alcanza el contexto con gemma-3, solo se tiene 20 request diarias en la version gratuita de 2.5)
+GOOGLE_MODEL_RECOMMEND=gemini-2.5-flash
+# Modelo para comparar items (Se usa gemma-3 porque no necesita tanto contexto y es más barato, se pueden hacer muchas request gratis al dia)
+GOOGLE_MODEL_COMPARE=gemma-3-27b-it
