--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon src/index.js",
-		"start": "node src/index.js",
+		"dev": "nodemon workers/main/src/index.js",
+		"start": "node workers/main/src/index.js",
 		"test": "vitest"
 	},
 	"devDependencies": {
